Add sys_chdir and sys___getcwd system calls with corresponding tests
- Implemented sys_chdir for changing directories.
- Implemented sys___getcwd for retrieving the current working directory.
- Added test programs for both sys_chdir and sys___getcwd.

--- a/userland/testbin/Makefile
+++ b/userland/testbin/Makefile
@@ -19,6 +19,8 @@ SUBDIRS+=test_write
 SUBDIRS+=test_close
 SUBDIRS+=test_dup2
 SUBDIRS+=test_lseek
+SUBDIRS+=test_chdir
+SUBDIRS+=test__getcwd
 
 # But not:
 #    userthreads    (no support in kernel API in base system)
