Changed test name

--- a/userland/testbin/Makefile
+++ b/userland/testbin/Makefile
@@ -20,7 +20,7 @@ SUBDIRS+=test_close
 SUBDIRS+=test_dup2
 SUBDIRS+=test_lseek
 SUBDIRS+=test_chdir
-SUBDIRS+=test__getcwd
+SUBDIRS+=test_getcwd
 
 # But not:
 #    userthreads    (no support in kernel API in base system)
